feat: resumen preliminar

--- a/T2_IvanMorales.ipynb
+++ b/T2_IvanMorales.ipynb
@@ -30,7 +30,31 @@
    "cell_type": "markdown",
    "id": "c03795ac",
    "metadata": {},
-   "source": []
+   "source": [
+    "<p style=\"text-align: justify;\">\n",
+    "\n",
+    "# MLOps\n",
+    "\n",
+    "### Que es MLOps?\n",
+    "\n",
+    "Las *Machine Learning Operations* son todas aquellas operaciones que se realizan para hacer un despliegue de una solucion integral de Machine Learning desde la parte de su desarrollo hasta la etapa de produccion.\n",
+    "\n",
+    "*These processes ensure that your model can be scaled for a large user base and perform accurately (Nayak, 2021)*\n",
+    "\n",
+    "### Por que necesitamos MLOps?\n",
+    "\n",
+    "\n",
+    "### Etapas de las MLOps\n",
+    "\n",
+    "- Scoping, en esta primera etapa se define el problema que se quiere solucionar con ayuda de Machine Learning.\n",
+    "- Data Engineering, la ingenieria de datos consiste en recuperar los datos necesarios, limpiarlos y formatearlos para su uso dentro del proyecto.\n",
+    "- Modelling, el modelado consiste en la parte de la creacion del modelo de machine learning pertinente, (Modelo de Clasificacion, Regresion, Red Neuronal, Arbol de Decision, SVM, etc.) aqui tambien se entrena y se chequea el performance del mismo.\n",
+    "- Deployment, en el despliegue de nuestro modelo se hace publico el modelo finalizado despues del entrenamiento y el ajuste de los hiperparametros necesarios, puede ser mediante el uso de tecnologias como Docker para trabajar en la nube o con el uso de una aplicacion si asi se requiere.\n",
+    "- Monitoring, el monitoreo es la etapa mas extenuante de nuestro proyecto pues debe ser continuo para garantizar que el modelo continue funcionando de manera adecuada para todos los usuarios asi como adaptarlo para nueva informacion que se le alimente al mismo.\n",
+    "\n",
+    "</p>\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
