feat: resumen completado y corregido

--- a/T2_IvanMorales.ipynb
+++ b/T2_IvanMorales.ipynb
@@ -8,6 +8,7 @@
     "# Proyecto de Ciencia de Datos \n",
     "* Profesor: Cristian Camilo Zapata Zuluaga\n",
     "* Alumno: Ivan Morales - 749190\n",
+    "* 2 de Septiembre de 2025\n",
     "\n",
     "### Tarea 2: Trabajando con Github\n",
     "[A Gentle Introduction to MLOps](https://towardsdatascience.com/a-gentle-introduction-to-mlops-7d64a3e890ff/)"
@@ -31,29 +32,25 @@
    "id": "c03795ac",
    "metadata": {},
    "source": [
-    "<p style=\"text-align: justify;\">\n",
-    "\n",
     "# MLOps\n",
     "\n",
-    "### Que es MLOps?\n",
+    "### Qué es MLOps?\n",
     "\n",
-    "Las *Machine Learning Operations* son todas aquellas operaciones que se realizan para hacer un despliegue de una solucion integral de Machine Learning desde la parte de su desarrollo hasta la etapa de produccion.\n",
+    "Las *Machine Learning Operations* son todas aquellas operaciones que se realizan para hacer un despliegue de una solución integral de Machine Learning desde la parte de su desarrollo hasta la etapa de producción.\n",
     "\n",
     "*These processes ensure that your model can be scaled for a large user base and perform accurately (Nayak, 2021)*\n",
-    "\n",
-    "### Por que necesitamos MLOps?\n",
-    "\n",
     "\n",
     "### Etapas de las MLOps\n",
     "\n",
     "- Scoping, en esta primera etapa se define el problema que se quiere solucionar con ayuda de Machine Learning.\n",
-    "- Data Engineering, la ingenieria de datos consiste en recuperar los datos necesarios, limpiarlos y formatearlos para su uso dentro del proyecto.\n",
-    "- Modelling, el modelado consiste en la parte de la creacion del modelo de machine learning pertinente, (Modelo de Clasificacion, Regresion, Red Neuronal, Arbol de Decision, SVM, etc.) aqui tambien se entrena y se chequea el performance del mismo.\n",
-    "- Deployment, en el despliegue de nuestro modelo se hace publico el modelo finalizado despues del entrenamiento y el ajuste de los hiperparametros necesarios, puede ser mediante el uso de tecnologias como Docker para trabajar en la nube o con el uso de una aplicacion si asi se requiere.\n",
-    "- Monitoring, el monitoreo es la etapa mas extenuante de nuestro proyecto pues debe ser continuo para garantizar que el modelo continue funcionando de manera adecuada para todos los usuarios asi como adaptarlo para nueva informacion que se le alimente al mismo.\n",
+    "- Data Engineering, la ingeniería de datos consiste en recuperar los datos necesarios, limpiarlos y formatearlos para su uso dentro del proyecto.\n",
+    "- Modelling, el modelado consiste en la parte de la creación del modelo de machine learning pertinente, (Modelo de clasificación, regresión, Red Neuronal, Árbol de decisión, SVM, etc.) aquí también se entrena y se chequea el performance del mismo.\n",
+    "- Deployment, en el despliegue de nuestro modelo se hace público el modelo finalizado después del entrenamiento y el ajuste de los hiperparametros necesarios, puede ser mediante el uso de tecnologías como Docker para trabajar en la nube o con el uso de una aplicación si así se requiere.\n",
+    "- Monitoring, el monitoreo es la etapa más extenuante de nuestro proyecto pues debe ser continuo para garantizar que el modelo continue funcionando de manera adecuada para todos los usuarios, así como adaptarlo para nueva información que se le alimente al mismo.\n",
     "\n",
-    "</p>\n",
-    "\n"
+    "### Por qué necesitamos MLOps?\n",
+    "\n",
+    "Estas etapas son cruciales en la elaboración de un proyecto como lo hemos visto van de inicio a fin, es muy sencillo trabajar en proyectos sencillos de manera local con bases de datos pequeñas y estáticas, sin embargo, al trabajar en el mundo real con cantidades de datos mucho más grandes y con la intervención de muchas más personas los errores están a la orden del día. Es critico seguir cada uno de estos pasos y prestar atención detallada en cada uno de ellos, la clave del éxito en el desarrollo de un proyecto de *Machine Learning* está en los detalles."
    ]
   }
  ],
